# memos

./: .dockerignore  .gitignore  ACTIVE.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  PRIORITIES.md  README.md  ROADMAP.md  cron-prompt.md  docker-compose.yml  opencode.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  publish.yml  test.yml
.hermes/plans/: 2026-04-13_memos-full-audit-and-roadmap.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/monolith-split/: SKILL.md
.planning/: AUDIT-v2.2.0.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.2.0-REQUIREMENTS.md  v2.2.0-ROADMAP.md
.planning/phases/01-api-security-hardening/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md
.planning/phases/01-maintenance/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-dashboard-p1/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-documentation/: 03-PLAN.md
.playwright-mcp/: page-2026-04-16T14-16-36-702Z.yml  page-2026-04-16T14-24-21-752Z.yml  page-2026-04-16T14-25-27-008Z.yml  page-2026-04-16T14-26-11-208Z.yml  page-2026-04-16T14-26-36-693Z.yml  page-2026-04-16T14-26-58-041Z.yml
.sisyphus/plans/: audit-fix.md
docs/plans/: 5-features-plan.md
docs/superpowers/plans/: 2026-04-17-codebase-improvement-plan.md
examples/: claude-code-mcp.md  openclaw-integration.md
memory/: 2026-04-07.md  2026-04-08.md
src/memos/: __init__.py  _benchmark_quality_data.py  _benchmark_quality_metrics.py  _benchmark_quality_models.py  _benchmark_quality_runner.py  _brain_analytics.py  _brain_context.py  _brain_entity.py  _brain_facade.py  _brain_models.py  _brain_scoring.py  _brain_search.py  _compounding_facade.py  _constants.py  _dedup_facade.py  _feedback_facade.py  _ingest_facade.py  _io_facade.py  _kg_algorithms.py  _kg_centrality.py  _kg_communities.py  _kg_core.py  _kg_facade.py  _kg_facts.py  _kg_helpers.py  _kg_inference.py  _kg_lint.py  _kg_paths.py  _kg_query.py  _maintenance_facade.py  _memory_facade.py  _namespace_facade.py  _palace_base.py  _palace_diary.py  _palace_hierarchy.py  _palace_recall.py  _runtime_facade.py  _sharing_facade.py  _tag_facade.py  _versioning_facade.py  (+42 more)
src/memos/api/: __init__.py  auth.py  errors.py  ratelimit.py  schemas.py  sse.py
src/memos/cache/: __init__.py  embedding_cache.py
src/memos/cli/: __init__.py  __main__.py  _common.py  _parser.py  commands_context.py  commands_dedup.py  commands_events.py  commands_feedback.py  commands_io.py  commands_knowledge.py  commands_maintenance.py  commands_memory.py  commands_namespace.py  commands_palace.py  commands_read.py  commands_system.py  commands_versioning.py  commands_wiki.py  commands_write.py
src/memos/compaction/: __init__.py  _discovery.py  _helpers.py  _models.py  _phases.py  engine.py
src/memos/consolidation/: __init__.py  async_engine.py  engine.py
src/memos/decay/: __init__.py  engine.py
src/memos/embeddings/: __init__.py  local.py
src/memos/ingest/: __init__.py  _miner_common.py  _miner_conversations.py  _miner_files.py  cache.py  chunker.py  conversation.py  engine.py  miner.py  parsers.py  url.py
src/memos/mcp_tools/: __init__.py  _enriched.py  _knowledge_graph.py  _memory.py  _palace.py  _registry.py  _sync.py  _wiki.py
src/memos/miner/: __init__.py  conversation.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api_admin.py  test_api_memory.py  test_api_recall_filters.py  test_api_route_split.py  test_api_route_validation.py  test_api_versioning.py  test_async.py  test_async_consolidation.py  test_auth.py  test_auto_file.py  test_batch_learn.py  test_benchmark.py  test_benchmark_quality.py  test_brain.py  test_brain_search.py  test_chroma.py  test_cli.py  test_cli_versioning.py  test_compaction.py  test_compounding_ingest.py  test_compression.py  test_config.py  test_conflict.py  test_consolidation.py  test_context.py  test_conversation_miner.py  test_core.py  test_dashboard.py  test_dashboard_static.py  test_decay.py  test_dedup.py  test_dedup_facade.py  test_dependabot.py  test_docker.py  test_embedding_cache.py  test_encryption.py  test_export_import.py  (+78 more)
tools/: migrate_markdown.py  run-quality-benchmarks.sh
(+82 files in other folders)
