[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memos-agent"
version = "1.0.0"
description = "Memory Operating System for LLM Agents — persistent, smart, local-first memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Mars375", email = "proto.labs.rnd@gmail.com"}]
keywords = ["llm", "agent", "memory", "rag", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.7"]
chroma = ["chromadb>=0.4"]
qdrant = ["qdrant-client>=1.7"]
pinecone = ["pinecone-client>=3.0"]
parquet = ["pyarrow>=12.0"]
server = ["fastapi>=0.104", "uvicorn>=0.24"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.23", "httpx"]

[project.scripts]
memos = "memos.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
